fixing spacing for koli logo

--- a/packages/gengi-is/src/scss/components/generic/about.scss
+++ b/packages/gengi-is/src/scss/components/generic/about.scss
@@ -35,7 +35,7 @@ about {
       text-align: center;
       background-color: $color-kolibri-yellow;
       svg {
-        margin: $spacing*2 0 $spacing*2 0;
+        margin: $spacing 0 $spacing*2 0;
        width: 200px;
       }
     }
